--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -940,7 +940,8 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 
 /*	Math in Wikipedia pop-frames.
  */
-.annotation.wikipedia-entry .mwe-math-element img {
+.annotation.wikipedia-entry .wikipedia-math-block-wrapper img,
+.annotation.wikipedia-entry .wikipedia-math-inline-wrapper img {
 	filter: invert(1);
 	background-color: var(--GW-wikipedia-math-image-background-color);
 }
@@ -951,6 +952,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1710943556">
-<script src="/static/js/head.js?v=1710993086"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1711769726">
+<script src="/static/js/head.js?v=1711769726"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1710872153" as="image">
