--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -938,6 +938,13 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
     filter: invert(1);
 }
 
+/*	Recently-modified link icon.
+ */
+.has-recently-modified-icon .recently-modified-icon-hook::before,
+.icon-single-white-star-on-black-circle::before {
+	filter: invert(1);
+}
+
 /*	Math in Wikipedia pop-frames.
  */
 .annotation.wikipedia-entry .wikipedia-math-block-wrapper img,
@@ -952,6 +959,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1711769726">
-<script src="/static/js/head.js?v=1711769726"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1711840075">
+<script src="/static/js/head.js?v=1711840075"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1710872153" as="image">
