--- a/css/special-occasions.css
+++ b/css/special-occasions.css
@@ -2,6 +2,20 @@
 /* SPECIAL OCCASIONS */
 /*********************/
 
+/*=--------------=*/
+/*= April Fool’s =*/
+/*=--------------=*/
+
+body.special-april-fools {
+	--GW-modified-serif-font-stack: "Great Primer Uncials", var(--GW-serif-font-stack);
+
+	font-family: var(--GW-modified-serif-font-stack);
+}
+
+body.special-april-fools .marginnote {
+	font-family: var(--GW-modified-serif-font-stack);
+}
+
 /*=-----------=*/
 /*= Halloween =*/
 /*=-----------=*/
