--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -1061,6 +1061,100 @@
 	font-display: swap;
 	unicode-range: U+005A;
 }
+
+/*******************/
+/* BLACKMOOR PLAIN */
+/*******************/
+
+@font-face {
+	font-family: 'Blackmoor Plain';
+	font-weight: normal;
+	src: url('/static/font/blackletter/BlackmoorPlain.otf?v=1711843694') format('opentype');
+	font-display: swap;
+}
+
+/******************/
+/* CLOISTER BLACK */
+/******************/
+
+@font-face {
+	font-family: 'Cloister Black';
+	font-weight: normal;
+	src: url('/static/font/blackletter/CloisterBlack.ttf?v=1711843780') format('truetype');
+	font-display: swap;
+}
+
+/***********/
+/* DEAREST */
+/***********/
+
+@font-face {
+	font-family: 'Dearest';
+	font-weight: normal;
+	src: url('/static/font/blackletter/Dearest.ttf?v=1711843786') format('truetype');
+	font-display: swap;
+}
+
+/********************/
+/* DEUTSCHE SCHRIFT */
+/********************/
+
+@font-face {
+	font-family: 'Deutsche Schrift';
+	font-weight: normal;
+	src: url('/static/font/blackletter/DeutscheSchrift.ttf?v=1711840346') format('truetype');
+	font-display: swap;
+}
+
+/*************************/
+/* ENGRAVERS OLD ENGLISH */
+/*************************/
+
+@font-face {
+	font-family: 'Engravers Old English';
+	font-weight: normal;
+	src: url('/static/font/blackletter/EngraversOldEnglish-Regular.ttf?v=1711843755') format('truetype');
+	font-display: swap;
+}
+@font-face {
+	font-family: 'Engravers Old English';
+	font-weight: bold;
+	src: url('/static/font/blackletter/EngraversOldEnglish-Bold.ttf?v=1711843752') format('truetype');
+	font-display: swap;
+}
+
+/************************/
+/* GREAT PRIMER UNCIALS */
+/************************/
+
+@font-face {
+	font-family: 'Great Primer Uncials';
+	font-weight: normal;
+	src: url('/static/font/blackletter/GreatPrimerUncials.otf?v=1711843815') format('opentype');
+	font-display: swap;
+}
+
+/********************/
+/* GUTENBERG GOTHIC */
+/********************/
+
+@font-face {
+	font-family: 'Gutenberg Gothic';
+	font-weight: normal;
+	src: url('/static/font/blackletter/GutenbergGothic.ttf?v=1711843823') format('truetype');
+	font-display: swap;
+}
+
+/****************/
+/* HANSA GOTHIC */
+/****************/
+
+@font-face {
+	font-family: 'Hansa Gothic';
+	font-weight: normal;
+	src: url('/static/font/blackletter/HansaGothic.ttf?v=1711843831') format('truetype');
+	font-display: swap;
+}
 @charset "UTF-8";
 
 
@@ -2419,18 +2513,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5464,7 +5558,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5636,7 +5730,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6084,7 +6178,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7025,7 +7119,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#question');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7235,7 +7329,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 .image-wrapper.focusable.small-image::after {
 	content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-	background-image: url('/static/img/icon/icons.svg?v=1710872153#magnifying-glass-plus-light');
+	background-image: url('/static/img/icon/icons.svg?v=1711844091#magnifying-glass-plus-light');
 	background-size: 56px 56px;
 	background-origin: content-box;
 	background-repeat: no-repeat;
@@ -7601,7 +7695,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1711844091#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7679,7 +7773,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1711844091#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
