YAML: move from camelCase to hyphen-separated, consistent with rest of codebase
per-page Pandoc metadata, which is in YAML, was written using camel-case like  'cssExtension' or 'safeURL', in part because I didn't know if YAML allowed hyphens in keys and didn't think to check. as more page variables accumulated, this makes them ever harder to remember in the context of all of our classes and templates, so I checked, and hyphens are safe in YAML keys, so mass rename: cssExtension->css-extension, safeURL->safe-url etc.

--- a/template/default.html
+++ b/template/default.html
@@ -15,10 +15,10 @@
     <!-- Hint at necessary third-party domains -->
     <link rel="preconnect" href="https://www.googletagmanager.com">
 
-    <meta name="title" content="$titlePlain$">
-    <meta name="citation_title" content="$titlePlain$">
-    <meta name="og:title" content="$titlePlain$">
-    <meta name="twitter:title" content="$titlePlain$">
+    <meta name="title" content="$title-plain$">
+    <meta name="citation_title" content="$title-plain$">
+    <meta name="og:title" content="$title-plain$">
+    <meta name="twitter:title" content="$title-plain$">
     <meta name="generator" content="https://github.com/gwern/gwern.net/">
     <meta name="creator" content="gwern.net">
     $if(author)$
@@ -36,16 +36,16 @@
     <meta name="twitter:site" content="gwern.net">
     <meta name="og:site" content="gwern.net">
     <meta name="og:type" content="article">
-    $if(descriptionEscaped)$<meta name="description" content="$descriptionEscaped$">
-    <meta name="og:description" content="$descriptionEscaped$">$endif$
+    $if(description-escaped)$<meta name="description" content="$description-escaped$">
+    <meta name="og:description" content="$description-escaped$">$endif$
     $if(thumbnail)$<meta property="og:image" content="https://gwern.net$thumbnail$">
-    $if(thumbnailText)$<meta property="og:image:alt" content="$thumbnailText$">$endif$
+    $if(thumbnail-text)$<meta property="og:image:alt" content="$thumbnail-text$">$endif$
     $else$<meta property="og:image" content="https://gwern.net/static/img/logo/logo-whitebg-large-border.png">
     <meta property="og:image:alt" content="Default thumbnail text: the Gwern.net site logo, a logotype of a large blackletter fraktur capital letter 'G' on a white background.">$endif$
-    <meta property="og:image:height" content="$thumbnailHeight$">
-    <meta property="og:image:width" content="$thumbnailWidth$">
-    <meta property="gwern:thumbnail:css-classes" content="$thumbnailCSS$">
-    $if(tagsPlain)$<meta name="keywords" content="$tagsPlain$">$endif$
+    <meta property="og:image:height" content="$thumbnail-height$">
+    <meta property="og:image:width" content="$thumbnail-width$">
+    <meta property="gwern:thumbnail:css-classes" content="$thumbnail-css$">
+    $if(tags-plain)$<meta name="keywords" content="$tags-plain$">$endif$
     <meta name="dc.date.issued" content="$created$">
     $if(error404)$<meta name="robots" content="noindex, nofollow, nosnippet, nocache, noarchive">$endif$
     <meta name="citation_publication_date" content="$created$">
@@ -56,16 +56,16 @@
     <link rel="canonical" href="https://gwern.net$url$">
     <meta name="citation_fulltext_html_url" content="https://gwern.net$url$">
     <meta name="og:url" content="https://gwern.net$url$">
-    <meta name="page-body-classes" content="$safeURL$ $cssExtension$">
+    <meta name="page-body-classes" content="$safe-url$ $css-extension$">
     <meta name="page-source" content="https://gwern.net$url$.md">
     <meta name="citation_fulltext_world_readable" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
 
     $if(author)$
-    <title>$titlePlain$, by $author$ · Gwern.net</title>
+    <title>$title-plain$, by $author$ · Gwern.net</title>
     $else$
-    <title>$titlePlain$ · Gwern.net</title>
+    <title>$title-plain$ · Gwern.net</title>
     $endif$
 
     <link id="favicon" rel="icon" type="image/png" href="/static/img/logo/logo-favicon-small.png">
@@ -87,7 +87,7 @@
   </head>
 
   <!-- Skip fancy css like dropcaps on index pages -->
-  $if(index)$<body class="page-$safeURL$">$else$<body class="page-$safeURL$ $cssExtension$">$endif$
+  $if(index)$<body class="page-$safe-url$">$else$<body class="page-$safe-url$ $css-extension$">$endif$
 
     <!-- SSI: Inlined asset links -->
     <!-- INLINED-ASSET-LINKS-BEGIN-->
@@ -126,9 +126,9 @@
               <span class="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
               <span class="page-confidence"><a href="/about#confidence-tags" class="icon-not" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')">certainty</a>: <em>$confidence$</em></span>
               <span class="page-importance"><a href="/about#importance-tags" class="icon-not" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span>
-              $if(backlinksYes)$<span class="backlinks"><a class="backlinks icon-not" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page).">backlinks</a></span>$endif$
-              $if(similarsYes)$<span class="similars"><a class="similars icon-not" href="#similars" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
-              $if(linkbibYes)$<span class="link-bibliography"><a href="#link-bibliography" class="icon-not" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>$endif$
+              $if(backlinks-yes)$<span class="backlinks"><a class="backlinks icon-not" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page).">backlinks</a></span>$endif$
+              $if(similars-yes)$<span class="similars"><a class="similars icon-not" href="#similars" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
+              $if(linkbib-yes)$<span class="link-bibliography"><a href="#link-bibliography" class="icon-not" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>$endif$
           </div>
         </div>
         $endif$
@@ -137,17 +137,17 @@
 
         $if(index)$ $else$
         <noscript><div id="noscript-warning-footer" class="admonition error" title="Warning to NoScript Users"><div class="admonition-title"><p>[<strong>Error</strong>: JavaScript disabled.]</p></div> <p>[Backlinks, similar links, and the link-bibliography require JS enabled to load.]</p></div></noscript>
-        $if(backlinksYes)$<section id="backlinks-section" class="level1">
+        $if(backlinks-yes)$<section id="backlinks-section" class="level1">
           <h1><a href="#backlinks-section" title="Link to section: § 'Backlinks'">Backlinks</a></h1>
-          <a id="backlinks" href="/metadata/annotation/backlink/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include-strict">[Backlinks (what links here)]</a>
+          <a id="backlinks" href="/metadata/annotation/backlink/$escaped-url$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include-strict">[Backlinks (what links here)]</a>
         </section>$endif$
-        $if(similarsYes)$<section id="similars-section" class="level1">
+        $if(similars-yes)$<section id="similars-section" class="level1">
           <h1><a href="#similars-section" title="Link to section: § 'Similar Links'">Similar Links</a></h1>
-          <a id="similars" href="/metadata/annotation/similar/$escapedURL$" title="Similar links for this link (by text embedding). Lazily-transcluded version at footer of page for easier scrolling." class="similars include-strict">[Similar links by topic]</a>
+          <a id="similars" href="/metadata/annotation/similar/$escaped-url$" title="Similar links for this link (by text embedding). Lazily-transcluded version at footer of page for easier scrolling." class="similars include-strict">[Similar links by topic]</a>
           </section>$endif$
-        $if(linkbibYes)$<section id="link-bibliography-section" class="level1 collapse">
+        $if(linkbib-yes)$<section id="link-bibliography-section" class="level1 collapse">
           <h1 class="collapse"><a href="#link-bibliography-section" title="Link to section: § 'Link Bibliography'">Link Bibliography</a></h1> <!-- NOTE: In theory, '.collapse' on a '<h1>' is redundant with the '<section>'; but added to parallel Pandoc-generated headers which set all attributes/classes on both. -->
-          <a id="link-bibliography" href="/metadata/annotation/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-even-when-collapsed link-bibliography">[Bibliography of links/references used in page]</a>$endif$
+          <a id="link-bibliography" href="/metadata/annotation/link-bibliography/$escaped-url$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include-even-when-collapsed link-bibliography">[Bibliography of links/references used in page]</a>$endif$
         </section>$endif$
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
