--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -3738,7 +3738,7 @@ section.footnotes .footnote-self-link {
 /*= Back-to-citation links =*/
 /*=------------------------=*/
 
-.footnotes .footnote-back {
+.footnotes a.footnote-back {
 	display: initial;
     margin: 0 0 0 0.5em;
     position: relative;
@@ -3753,7 +3753,7 @@ section.footnotes .footnote-self-link {
 }
 /*	Hide outside of a footnotes section.
  */
-.footnote-back {
+a.footnote-back {
 	display: none;
 }
 
