--- a/template/default.html
+++ b/template/default.html
@@ -117,10 +117,9 @@
 
       <article> $if(index)$ $else$
         <div class="markdownBody" id="page-metadata">
-          $if(description)$
-            <div class="page-description" title="Short description of page."><p>$description$</p></div>$endif$
-            $if(tagsHTML)$ $tagsHTML$ $endif$
-            <div class="page-metadata-fields">
+          $if(tagsHTML)$ $tagsHTML$ $endif$
+          $if(description)$<div class="page-description" title="Short description of page."><p>$description$</p></div>$endif$
+          <div class="page-metadata-fields">
               $if(author)$ <span class="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
               <span class="page-date-range"><span class="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span class="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title$': $url$.md" class="icon-not" href="$url$.md"><span class="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
               <span class="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
