--- a/template/default.html
+++ b/template/default.html
@@ -15,7 +15,7 @@
     <!-- Hint at necessary third-party domains -->
     <link rel="preconnect" href="https://www.googletagmanager.com">
 
-    <meta name="title" content="$title-plain$">
+    <meta name="title" content="$title$">
     <meta name="citation_title" content="$title-plain$">
     <meta name="og:title" content="$title-plain$">
     <meta name="twitter:title" content="$title-plain$">
@@ -121,7 +121,7 @@
           $if(description)$<div class="page-description" title="Short description of page."><p>$description$</p></div>$endif$
           <div class="page-metadata-fields">
               $if(author)$ <span class="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
-              <span class="page-date-range"><span class="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span class="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title$': $url$.md" class="icon-not" href="$url$.md"><span class="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
+              <span class="page-date-range"><span class="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span class="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title-plain$': $url$.md" class="icon-not" href="$url$.md"><span class="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
               <span class="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
               <span class="page-confidence"><a href="/about#confidence-tags" class="icon-not" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')">certainty</a>: <em>$confidence$</em></span>
               <span class="page-importance"><a href="/about#importance-tags" class="icon-not" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span>
