titles: looks like we need both escaped & unescaped HTML strings for full title handling of italics & spans

--- a/template/default.html
+++ b/template/default.html
@@ -15,10 +15,10 @@
     <!-- Hint at necessary third-party domains -->
     <link rel="preconnect" href="https://www.googletagmanager.com">
 
-    <meta name="title" content="$title$">
-    <meta name="citation_title" content="$title-plain$">
-    <meta name="og:title" content="$title-plain$">
-    <meta name="twitter:title" content="$title-plain$">
+    <meta name="title" content="$title-escaped$">
+    <meta name="citation_title" content="$title-escaped$">
+    <meta name="og:title" content="$title-escaped$">
+    <meta name="twitter:title" content="$title-escaped$">
     <meta name="generator" content="https://github.com/gwern/gwern.net/">
     <meta name="creator" content="gwern.net">
     $if(author)$
